# pomo-tui

./: .gitignore  CLAUDE.md  Cargo.toml  Design.md  Dockerfile  LICENSE  README.md
.github/workflows/: release.yml  rust.yml  tag.yml
docs/: API_COMMANDS.md  DESIGN_TCP_SERVER.md  Design.md  todo-feature-design.md  web-dashboard-and-changetask.md
migrations/: 0001_init.sql  0002_todos.sql  0003_todo_priority.sql
src/: app.rs  logging.rs  main.rs  timer.rs  todo.rs  tui.rs  utils.rs
src/client/: mod.rs  tcp.rs
src/db/: events.rs  mod.rs  todos.rs
src/protocol/: messages.rs  mod.rs
src/server/: core.rs  http.rs  mod.rs  tcp.rs
src/static/: index.html
