[package]
name = "pomo-tui"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version="0.4.41" , features = ["serde"] }
crossterm = "0.29.0"
log = "0.4.27"
notify-rust = "4.11.7"
ratatui = "0.30.0-alpha.5"
serde = {version="1.0.219", features = ["derive"]}
serde_json = "1.0.143"
tokio = {version="1.47.1", features=["full"]}
uuid = { version="1.18.1" ,features = ["serde", "v4"] }
